--- a/.env.development
+++ b/.env.development
@@ -1,8 +1,8 @@
-VITE_APP_DCL_API_NODE=http://localhost:8080/api
-VITE_APP_DCL_RPC_NODE=http://localhost:8080/rpc
-VITE_APP_DCL_WEBSOCKET_NODE=ws://localhost:8080/websocket
-VITE_APP_DCL_CHAIN_ID=dclchain
-VITE_APP_DCL_CHAIN_NAME=dclchain-localhost
+VITE_APP_DCL_API_NODE=https://on.dcl.csa-iot.org
+VITE_APP_DCL_RPC_NODE=https://on.dcl.csa-iot.org:26657
+VITE_APP_DCL_WEBSOCKET_NODE=ws://on.dcl.csa-iot.org:26657/websocket
+VITE_APP_DCL_CHAIN_ID=main-net
+VITE_APP_DCL_CHAIN_NAME=DCL-Chain-MainNet
 VITE_APP_DCL_ADDR_PREFIX=cosmos
 VITE_APP_DCL_SDK_VERSION=Stargate
 VITE_APP_DCL_TX_API=/rpc/tx?hash=0x
